--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ main {
   font-size: 3rem;
   background-color: white;
   border: 1px solid black;
+  border-radius: 1rem;
   padding: 0.25em 0.5em;
   cursor: pointer;
 
